--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -429,7 +429,7 @@ footer .copyright {
 }
 
 @media only screen and (min-width: 760px) {
-  footer .content {
-    font-size: .625rem;
-  }
+
+ footer .content {
+  flex-grow: initial;  }
 }
